test/constBlockConsuming15_1.slq

def foo(x:ğ”¹){
	y:=dup(x);
	if y{
		x:=H(x);
		z:=X(y); /// error
	}else{
		z:=y;
	}
	return (x,z);
}
